# image-workflows

./: README.md  pyproject.toml
bbbc_json/: bbbc_feature.json  bbbc_segconfig.json  bbbc_segmentation.json
compute/: viz_workflow_BBBC001.json  viz_workflow_BBBC001_download.json  viz_workflow_BBBC001_phase1.json  viz_workflow_BBBC001_phase2.json  viz_workflow_BBBC001_process.json
config/download/BBBC/: BBBC001_download.yaml  BBBC003_download.yaml  BBBC004_download.yaml  BBBC007_download.yaml  BBBC008_download.yaml
config/full/BBBC/: BBBC001-phase1.yaml  BBBC001-phase2.yaml  BBBC001_timesliceNaming.yaml
config/process/BBBC/: BBBC001_process.yaml  BBBC003_process.yaml  (+1 more)
configuration/analysis/: BBBC001.yml  BBBC039.yml  sample.yml
configuration/segmentation/: BBBC001.yml  BBBC039.yml
cwl/: BasicFlatfieldEstimation.cwl  BbbcDownload.cwl  FileRenaming.cwl  ImageAssembler.cwl  KaggleNucleiSegmentation.cwl  OmeConverter.cwl  PrecomputeSlide.cwl
cwl_workflows/: __init__.py  __main__.py  cwl_analysis.py  cwl_features_extraction.py  cwl_nuclear_segmentation.py  utils.py
debug/: debug_apply_flat_field.py  debug_basic_docker.py
examples/: segmentation_workflow.py  single_process.py  single_process_phase2.py  single_workflow.py  single_workflow_phase2.py  utils.py
notebooks/: workflow-editor.ipynb  workflow-ui.ipynb  workflow.ipynb
src/: __main__.py
tests/: conftest.py  test_build.py  test_compute.py  test_models.py  test_pipelines.py
tests/testdata/: BBBC001_process.yaml  viz_workflow_BBBC001.json
workflows/: cwl_analysis.py  cwl_nuclear_segmentation.py
(+12 files in other folders)
